# Trojan-Playground

./: CMakeLists.txt  README.md  myFile.txt
client/: CMakeLists.txt  main.cc
installer/: CMakeLists.txt  main.cc  trojan_installer.cc  trojan_installer.h  trojan_udfs.h
pe/: udf.cc
protos/: CMakeLists.txt  trojan_messages.grpc.pb.cc  trojan_messages.grpc.pb.h  trojan_messages.pb.cc  trojan_messages.pb.h  trojan_messages.proto
server/: CMakeLists.txt  main.cc  trojan_server.cc  trojan_server.h
service/: trojan_server.service
